--- a/Pages/Welcome.razor
+++ b/Pages/Welcome.razor
@@ -73,6 +73,6 @@
     private void Continue()
     {
         // Navega para a página de cadastro
-        Navigation.NavigateTo("/login");
+        Navigation.NavigateTo("/app-financeiro/login");
     }
 }
