--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -1,4 +1,4 @@
-@page "/app-financeiro/login"
+@page "/login"
 @inject IJSRuntime JS
 @using System.ComponentModel.DataAnnotations
 @inject NavigationManager Navigation
