--- a/Pages/CreditCardOverview.razor
+++ b/Pages/CreditCardOverview.razor
@@ -147,18 +147,18 @@
     private void AddTransaction()
     {
         // Navegar para a página de adicionar transação
-        NavigationManager.NavigateTo("/add-creditcard-transaction");
+        NavigationManager.NavigateTo("add-creditcard-transaction");
     }
 
     private void ViewTransactions()
     {
         // Navegar para a página de ver todas as transações
-        NavigationManager.NavigateTo("/credit-card-report");
+        NavigationManager.NavigateTo("credit-card-report");
     }
 
     private void ConfigureCreditCard()
     {
         // Navegar para a página de configuração do cartão
-        NavigationManager.NavigateTo("/configure-creditcard");
+        NavigationManager.NavigateTo("configure-creditcard");
     }
 }
