--- a/Pages/AddCreditCardTransaction.razor
+++ b/Pages/AddCreditCardTransaction.razor
@@ -166,6 +166,6 @@
 
     private void GoToListCardCredit()
     {
-        NavigationManager.NavigateTo("credit-card-list");
+        NavigationManager.NavigateTo("configure-creditcard");
     }
 }
