--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -23,6 +23,9 @@
 </div>
 
 <style>
+   .mb-3 {
+       width: 300px;
+     }
     .login-page {
         background-color: #e0f7e9;
        @*  height: 100vh; *@
