--- a/Pages/Login.razor
+++ b/Pages/Login.razor
@@ -75,12 +75,12 @@
             await JS.InvokeVoidAsync("localStorage.setItem", "userEmail", loginModel.Email);
 
             // Redireciona para a página principal
-            Navigation.NavigateTo("/home");
+            Navigation.NavigateTo("home");
         }
         else
         {
             await JS.InvokeVoidAsync("alert", "Usuário não encontrado. Por favor, cadastre-se.");
-            Navigation.NavigateTo("/register");
+            Navigation.NavigateTo("register");
         }
     }
 
