--- a/Pages/CreditCardReport.razor
+++ b/Pages/CreditCardReport.razor
@@ -34,7 +34,7 @@
             <th>Motivo</th>
             <th>Valor</th>
             <th>Pacelas</th>
-            <th>Vencim</th>
+            <th>Data</th>
         </tr>
     </thead>
     <tbody>
