--- a/Pages/Configurecreditcard.razor
+++ b/Pages/Configurecreditcard.razor
@@ -21,7 +21,7 @@
                 <th>Nome</th>
                 <th>Limite</th>
                 <th>Gasto</th>
-                <th>Limite</th>
+                <th>Disponi</th>
                 <th>Ações</th> <!-- Nova coluna para ações -->
             </tr>
         </thead>
