--- a/Pages/CreditCardOverview.razor
+++ b/Pages/CreditCardOverview.razor
@@ -64,7 +64,7 @@
             <th>Motivo</th>
             <th>Valor</th>
             <th>Parcelas</th>
-            <th>Vencimento</th>
+            <th>Data</th>
         </tr>
     </thead>
     <tbody>
